issues/#94 WIP